adding category and product
